--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <aside id="sidebar"></aside>
+    <aside id="sidebar">
+
+
+    </aside>
     <!-- /#sidebar -->
-    <main id="main_site"></main>
+
+    <main id="main_site">
+
+
+    </main>
+
     <!-- /#main_site -->
-    <footer id="footer_site"></footer>
+    
+    <footer id="footer_site">
+
+        
+    </footer>
     <!-- /#footer_site -->
 
 </body>
