add btn in top_bar

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                    <!-- /.logo -->
 
                    <ul>
-                       <li class="nav_item flex row">
+                       <li class="nav_item flex row active">
                            <div class="icon">
                                 <img src="./assets/img/home.svg" alt="home">
                            </div>
@@ -138,7 +138,11 @@
                 <!-- /.cl_20 -->
 
                 <div class="cl_80 main_view">
-                    <div class="top_bar"></div>
+                    <div class="top_bar row flex">
+                        <div class="btn upc">
+                            effettua l'upgrade
+                        </div>
+                    </div>
                     <!-- /.top_bar -->
 
 
