--- a/index.html
+++ b/index.html
@@ -163,8 +163,51 @@
 
     <!-- /#main_site -->
 
-    <footer id="footer_site">
-        lorem lorem lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nisi veritatis illum reprehenderit dicta suscipit accusamus laborum odit rem saepe. In maxime sit cupiditate repellat illum soluta beatae tempora atque.
+    <footer id="footer_site" class="flex">
+        <div class="player row flex">
+            <div class="cl_25 player_lh flex">
+                <div class="cover">
+                    <img src="./assets/img/sinister.jpeg" alt="sinister">
+                </div>
+                <div class="music flex">
+                    <h4 class="band">
+                        Sinister
+                    </h4>
+                    <h5 class="song">
+                        Brano Nome
+                    </h5>
+                </div>
+
+                <div class="music_actions flex">
+                    <div class="like grey pdlr_10">
+                        <i class="fa-regular fa-heart"></i> 
+                    </div>
+                    <div class="save grey pdlr_10">
+                        <i class="fa-regular fa-folder"></i>
+                    </div>
+                </div>
+
+            </div>
+            <!-- /.player_lh -->
+
+            <div class="player_mid">
+
+
+            </div>
+            <!-- /.player_mid -->
+
+            <div class="player_rh">
+
+
+            </div>
+            <!-- /.player_rh -->
+
+
+
+
+        </div>
+        <!-- /.row -->
+        
 
         
     </footer>
