add correction in html syntax

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="main_container">
             <div class="row flex">
 
-                <div class="cl_20 navbar row flex">
+                <aside class="cl_20 navbar row flex">
 
 
                    <div class="logo">
@@ -134,7 +134,7 @@
                         </div>
                    </div>
     
-                </div>
+                </aside>
                 <!-- /.cl_20 -->
 
                 <div class="cl_80 main_view">
