--- a/index.html
+++ b/index.html
@@ -196,8 +196,21 @@
             </div>
             <!-- /.player_mid -->
 
-            <div class="player_rh">
+            <div class="cl_25 player_rh flex">
+                <div>
+                    <i class="fa-solid fa-bars pdlr_10"></i>
+                </div>
+                <div>
+                    <i class="fa-solid fa-tv pdlr_10"></i>
+                </div>
+                <div>
+                    <i class="fa-solid fa-volume-high pdlr_10"></i>
+                </div>
+                <div class="control">
+                    <div class="progress">
 
+                    </div>
+                </div>
 
 
             </div>
