add correction in player_rh

--- a/index.html
+++ b/index.html
@@ -190,7 +190,9 @@
             </div>
             <!-- /.player_lh -->
 
-            <div class="player_mid">
+            <div class="cl_50 player_mid flex">
+                
+
 
 
             </div>
