--- a/index.html
+++ b/index.html
@@ -191,9 +191,48 @@
             <!-- /.player_lh -->
 
             <div class="cl_50 player_mid flex">
-                
+                <div class="mid_top flex ">
+                    <div>
+                        <i class="fa-solid fa-shuffle pdlr_20"></i>
+                    </div>
 
+                    <div>
+                        <i class="fa-solid fa-backward-step pdlr_20"></i>
+                    </div>
 
+                    <div>
+                        <i id="mid_play" class="fa-regular fa-circle-play pdlr_30"></i>
+                    </div>
+
+                    <div>
+                        <i class="fa-solid fa-forward-step pdlr_20"></i>
+                    </div>
+
+                    <div>
+                        <i class="fa-solid fa-rotate-right pdlr_20"></i>
+                    </div>
+
+                </div>
+
+                <div class="mid_bottom flex">
+
+                    <span class="time pdlr_30">
+                        0:25
+
+                    </span>
+
+                    <div class="control">
+                        <div class="progress">
+    
+                        </div>
+                    </div>
+
+                    <span class="time pdlr_30">
+                        4:35
+
+                    </span>
+
+                </div>
 
             </div>
             <!-- /.player_mid -->
