add menu in main view section

--- a/index.html
+++ b/index.html
@@ -145,9 +145,16 @@
                     </div>
                     <!-- /.top_bar -->
 
-
-
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id esse eligendi eum voluptas quaerat placeat inventore quam iusto magni, voluptate qui totam perferendis eius blanditiis, debitis ea iste cum vitae.
+                    <div class="menu flex">
+                        <ul class="category flex pdl_20 grey">
+                            <li class="upc pdlr_20 flex first">in evidenza <div id="active_bottom"></div></li>
+                            <li class="upc pdlr_20">podcast</li>
+                            <li class="upc pdlr_20">classifiche</li>
+                            <li class="upc pdlr_20">generi e mood</li>
+                            <li class="upc pdlr_20">nuove uscite</li>
+                            <li class="upc pdlr_20">scopri</li>
+                        </ul>
+                    </div>
             
 
                 </div>
