add border radius in images of two last cards

--- a/index.html
+++ b/index.html
@@ -347,11 +347,11 @@
                                 <div class="cards">
     
                                     <div class="album">
-                                        <img src="./assets/img/youg.jpeg" alt="Youg">
+                                        <img class="br_50" src="./assets/img/youg.jpeg" alt="Youg">
 
                                         <div class="album_text flex">
                                          <h3 class="album_title">
-                                             Youg
+                                             Lana Del Rey
                                             </h3>
 
                                          </div>
@@ -363,11 +363,11 @@
                                 <div class="cards">
     
                                  <div class="album">
-                                        <img src="./assets/img/einaudi.jpeg" alt="Einaud">
+                                        <img class="br_50" src="./assets/img/einaudi.jpeg" alt="Einaud">
 
                                         <div class="album_text flex">
                                             <h3 class="album_title">
-                                                Einaudi
+                                                Ludovico Einaudi
                                             </h3>
 
                                         </div>
