add css effects

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <div class="cl_80 main_view">
 
                     <div class="top_bar row flex">
-                        <div class="btn upc">
+                        <div class="btn upc h_scl">
                             effettua l'upgrade
                         </div>
                     </div>
@@ -529,23 +529,23 @@
             <div class="cl_60 player_mid flex">
                 <div class="mid_top flex ">
                     <div>
-                        <i class="fa-solid fa-shuffle pdlr_20"></i>
+                        <i class="fa-solid fa-shuffle pdlr_20 h_scl"></i>
                     </div>
 
                     <div>
-                        <i class="fa-solid fa-backward-step pdlr_20"></i>
+                        <i class="fa-solid fa-backward-step pdlr_20 h_scl"></i>
                     </div>
 
                     <div>
-                        <i id="mid_play" class="fa-regular fa-circle-play pdlr_30"></i>
+                        <i id="mid_play" class="fa-regular fa-circle-play pdlr_30 h_scl"></i>
                     </div>
 
                     <div>
-                        <i class="fa-solid fa-forward-step pdlr_20"></i>
+                        <i class="fa-solid fa-forward-step pdlr_20 h_scl"></i>
                     </div>
 
                     <div>
-                        <i class="fa-solid fa-rotate-right pdlr_20"></i>
+                        <i class="fa-solid fa-rotate-right pdlr_20 h_scl"></i>
                     </div>
 
                 </div>
@@ -558,9 +558,9 @@
                     </span>
 
                     <div class="control">
-                        <div class="progress">
-    
-                        </div>
+                        <div class="progress"></div>
+                        <i class="fa-solid fa-circle i_prog"></i>
+                        
                     </div>
 
                     <span class="time pdlr_30">
@@ -575,18 +575,19 @@
 
             <div class="cl_20 player_rh flex">
                 <div>
-                    <i class="fa-solid fa-bars pdlr_10"></i>
+                    <i class="fa-solid fa-bars pdlr_10 h_scl"></i>
                 </div>
                 <div>
-                    <i class="fa-solid fa-tv pdlr_10"></i>
+                    <i class="fa-solid fa-tv pdlr_10 h_scl"></i>
                 </div>
                 <div>
-                    <i class="fa-solid fa-volume-high pdlr_10"></i>
+                    <i class="fa-solid fa-volume-high pdlr_10 h_scl"></i>
                 </div>
                 <div class="control">
                     <div class="progress">
 
                     </div>
+                    <i class="fa-solid fa-circle i_prog"></i>
                 </div>
 
 
