--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 
     <footer id="footer_site" class="flex">
         <div class="player row flex">
-            <div class="cl_20 player_lh flex">
+            <div class="player_lh flex">
                 <div class="cover">
                     <img src="./assets/img/sinister.jpeg" alt="sinister">
                 </div>
@@ -521,12 +521,10 @@
                     </div>
                 </div>
 
-               
-
             </div>
             <!-- /.player_lh -->
 
-            <div class="cl_60 player_mid flex">
+            <div class="player_mid flex">
                 <div class="mid_top flex ">
                     <div>
                         <i class="fa-solid fa-shuffle pdlr_20 h_scl"></i>
@@ -573,7 +571,7 @@
             </div>
             <!-- /.player_mid -->
 
-            <div class="cl_20 player_rh flex">
+            <div class="player_rh flex">
                 <div>
                     <i class="fa-solid fa-bars pdlr_10 h_scl"></i>
                 </div>
