add media query small version

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 
                 </div>
                 <!-- /.main_view -->
-            </div>
+            </div>h
             <!-- /.row -->
 
         </div>
@@ -499,7 +499,7 @@
 
     <footer id="footer_site" class="flex">
         <div class="player row flex">
-            <div class="player_lh flex">
+            <div class="cl_20 player_lh flex">
                 <div class="cover">
                     <img src="./assets/img/sinister.jpeg" alt="sinister">
                 </div>
@@ -524,7 +524,7 @@
             </div>
             <!-- /.player_lh -->
 
-            <div class="player_mid flex">
+            <div class="cl_60 player_mid flex">
                 <div class="mid_top flex ">
                     <div>
                         <i class="fa-solid fa-shuffle pdlr_20 h_scl"></i>
@@ -571,7 +571,7 @@
             </div>
             <!-- /.player_mid -->
 
-            <div class="player_rh flex">
+            <div class="cl_20 player_rh flex">
                 <div>
                     <i class="fa-solid fa-bars pdlr_10 h_scl"></i>
                 </div>
