add media query x_small version

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                     <div class="nav_top">
 
                         <div class="logo pdl_24">
-                            <img src="./assets/img/logo.svg" alt="logo_spotify">
+                            <img class="main_logo" src="./assets/img/logo.svg" alt="logo_spotify">
+                            <img class="small_logo"src="/assets/img/logo-small.svg" alt="logo_sm_spotify">
                         </div>
                         <!-- /.logo -->
      
@@ -572,13 +573,13 @@
             <!-- /.player_mid -->
 
             <div class="cl_20 player_rh flex">
-                <div>
+                <div class="selector">
                     <i class="fa-solid fa-bars pdlr_10 h_scl"></i>
                 </div>
-                <div>
+                <div class="tv">
                     <i class="fa-solid fa-tv pdlr_10 h_scl"></i>
                 </div>
-                <div>
+                <div class="vol">
                     <i class="fa-solid fa-volume-high pdlr_10 h_scl"></i>
                 </div>
                 <div class="control">
