--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 
                 </div>
                 <!-- /.main_view -->
-            </div>h
+            </div>
             <!-- /.row -->
 
         </div>
