add corrections in menu

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
                     <div class="container_lg">
 
-                        <div class="menu flex">
+                        <div class="menu">
                             <ul class="category flex pdl_20 grey">
                                 <li class="upc pdlr_20 flex first">in evidenza <div id="active_bottom"></div></li>
                                 <li class="upc pdlr_20">podcast</li>
